--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
 		"SMNTCS Pinterest Save Button"
 	],
 	"homepage": "https://github.com/nielslange/smntcs-pinterest-save-button",
+	"support": {
+		"issues": "https://github.com/nielslange/smntcs-pinterest-save-button/issues",
+		"source": "https://github.com/nielslange/smntcs-pinterest-save-button"
+	},
 	"license": "GPL-3.0-or-later",
 	"authors": [
 		{
@@ -19,17 +23,25 @@
 		"php": ">=5.6"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
-		"jakub-onderka/php-parallel-lint": "^1.0",
-		"wptrt/wpthemereview": "^0.2.1"
+		"dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+		"wptrt/wpthemereview": "^0.2.1",
+		"humanmade/psalm-plugin-wordpress": "^2.2",
+		"overtrue/phplint": "^3.4",
+		"phpcompatibility/phpcompatibility-all": "^1.1",
+		"squizlabs/php_codesniffer": "^3.8",
+		"vimeo/psalm": "^4.30",
+		"wp-coding-standards/wpcs": "^2.3",
+		"php-parallel-lint/php-parallel-lint": "^1.1"
 	},
 	"scripts": {
-		"checkcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --runtime-set testVersion 5.6-",
-		"fixcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf --runtime-set testVersion 5.6-",
-		"lint": "@php ./vendor/bin/parallel-lint --exclude .git --exclude vendor ."
+		"phpcbf": "phpcbf --standard=phpcs.xml .",
+		"phpcs": "phpcs --standard=phpcs.xml .",
+		"phplint": "phplint",
+		"psalm": "psalm --no-cache"
 	},
-	"support": {
-		"issues": "https://github.com/nielslange/smntcs-pinterest-save-button/issues",
-		"source": "https://github.com/nielslange/smntcs-pinterest-save-button"
+	"config": {
+		"allow-plugins": {
+			"dealerdirect/phpcodesniffer-composer-installer": true
+		}
 	}
 }
