--- a/package.json
+++ b/package.json
@@ -18,9 +18,17 @@
 		"url": "https://github.com/nielslange/smntcs-pinterest-save-button/issues"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^5.0.0"
+		"@wordpress/prettier-config": "3.5.0",
+		"@wordpress/scripts": "^5.0.0",
+		"eslint": "8.56.0",
+		"npm-run-all": "4.1.5"
 	},
 	"scripts": {
-		"lint:pkg-json": "wp-scripts lint-pkg-json"
+		"lint:pkg-json": "wp-scripts lint-pkg-json",
+		"test": "npm-run-all --parallel phpcs phplint psalm",
+		"phpcbf": "composer run phpcbf",
+		"phpcs": "composer run phpcs",
+		"phplint": "composer run phplint",
+		"psalm": "composer run psalm"
 	}
 }
