--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
 		"php": ">=5.6"
 	},
 	"require-dev": {
-		"dealerdirect/phpcodesniffer-composer-installer": "^1.0.0",
-		"humanmade/psalm-plugin-wordpress": "^3.1.2",
-		"overtrue/phplint": "^9.5.6",
-		"phpcompatibility/phpcompatibility-all": "^1.1.4",
-		"squizlabs/php_codesniffer": "^3.12.0",
-		"vimeo/psalm": "^6.9.4",
-		"wp-coding-standards/wpcs": "^3.1.0"
+		"dealerdirect/phpcodesniffer-composer-installer": "1.0.0",
+		"humanmade/psalm-plugin-wordpress": "3.1.2",
+		"overtrue/phplint": "9.5.6",
+		"phpcompatibility/phpcompatibility-all": "1.1.4",
+		"squizlabs/php_codesniffer": "3.12.0",
+		"vimeo/psalm": "6.9.4",
+		"wp-coding-standards/wpcs": "3.1.0"
 	},
 	"scripts": {
 		"phpcbf": "phpcbf --standard=phpcs.xml .",
