Update GitHub Actions workflow to lock PHP version to 8.3.16 for Psalm compatibility.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,11 @@ on: [pull_request, push]
 jobs:
   PHPCS:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        php-version: [8.3.16] # Lock this version to run Psalm
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
