Temporary disable Psalm

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,22 +36,22 @@ jobs:
       - name: Run PHPLint
         run: composer phplint
 
-  Psalm:
-    runs-on: ubuntu-latest
+  # Psalm:
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        php-version: [8.3.16] # Lock this version to run Psalm
+  #   strategy:
+  #     matrix:
+  #       php-version: [8.3.16] # Lock this version to run Psalm
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
 
-      - name: Install Composer dependencies
-        uses: ramsey/composer-install@v1
+  #     - name: Install Composer dependencies
+  #       uses: ramsey/composer-install@v1
 
-      - name: Show version info
-        run: ./vendor/bin/psalm --version
+  #     - name: Show version info
+  #       run: ./vendor/bin/psalm --version
 
-      - name: Run Psalm
-        run: composer psalm
+  #     - name: Run Psalm
+  #       run: composer psalm
